<resources>
    <string name="app_name">ANCE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <!--Login Screen -->

    <string name="sign_in">Sign in</string>
    <string name="manage_your_events">ANCE 2017</string>
    <string name="you_are_one_step">You are just one step behind</string>
    <string name="hint_email_id">Email Address</string>

    <string name="hint_password">Password</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="sign_up">Signup</string>
    <string name="empty_email">Please enter email.</string>
    <string name="empty_email_mob">Please enter email/mobile.</string>

    <string name="invalid_email">Invalid email.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="server_error">Server not responding.</string>
    <string name="enter_your_emial_below">Enter your email address below and we will send your password reset instructions</string>

    <string name="submit">SUBMIT</string>


    <string name="empty_new_password">Please enter new password.</string>
    <string name="empty_confirm_password">Please enter confirm password.</string>
    <string name="password_not_match">The password does not match. Please try again.</string>

    <!--Registration -->

    <string name="registration">Registration</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_company_name">Company Name</string>
    <string name="term_condition">Accept Term &amp; Condition.</string>

    <string name="empty_name">Please enter name.</string>
    <string name="empty_mobile">Please enter mobile number.</string>
    <string name="empty_company_name">Please enter company name.</string>
    <string name="empty_profile_image">Please select profile image.</string>


    <!--Post event-->

    <string name="empty_event_title">Please enter event title.</string>
    <string name="empty_event_description">Please enter event description.</string>
    <string name="post_event">Create Post</string>
    <string name="event_title">Title</string>
    <string name="max_char">Max 10 char</string>
    <string name="max_char30">Max 30 char</string>
    <string name="comment">Please enter comment</string>
    <string name="location">Location</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_and_conditions">By creating an account, you agree to our,\n Terms and Conditions.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account you agree to our</string>
    <string name="register">Register</string>
    <string name="about_us">About us</string>
    <string name="ance_2017">ANCE 2017</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="my_friend">MY FRIENDS</string>

    <string name="timeline">TIMELINE</string>
    <string name="blogging">BLOGS</string>
    <string name="setting">SETTING</string>
    <string name="logout">LOGOUT</string>
    <string name="description">Description</string>
    <string name="post">POST</string>
    <string name="add_remove">Add/Remove</string>
    <string name="search_name">Search name</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="cancel">CANCEL</string>
    <string name="request">REQUEST</string>
    <string name="enter_your_email_address_to_request_a_password_reset">Enter your email address to request a password reset</string>
    <string name="agenda">Agenda</string>
    <string name="hurry_for_lucy_draw">Hurry For Lucky Draw</string>
    <string name="about_ance">About ANCE</string>
    <string name="convention_objective">Convention Objectives:</string>
    <string name="attend_description">All direct selling and MLM distributors who are eager for learning and mentoring from the legends. All direct selling and MLM companies open to unite with all the big players and new comers to promote camaraderie. International companies who would like to explore opportunities and with vision for expansion in the Philippines and nearby Asian Countries. Distributors aspiring to meet the “Ultimate Who’s Who.” of Network Marketing and Direct Selling Industry.</string>
    <string name="objective_description">To strengthen the Network Marketing Industry which has been around for over 70 years. To educate Distributors and Professionals on the Ethics of the Industry. To empower and educate on employment and financial freedom. To bring together the industries best on one platform. To recognize and award the companies and leaders who have made a difference in the industry. The Convention also brings together a Red Carpet Prestigious Gala Dinner and Awards Night where in Top notch leaders from different countries, local Government Representatives, celebrities and Professionals from the Network Marketing Industry will be present to witness the Award Ceremony. Exclusive rights for Media and Television. The event is a chance to learn from leaders and trainers while making new friends from Asia and around the globe. Take part and witness the next Asian Networkers Convention which explains in greater depth how we are organized as a community and to generate interaction with industry experts, insights and impact from our convention activities.</string>
    <string name="about_ance_description"><![CDATA[The World of Professionals is an independent international organization committed to providing a platform for Professionals in all diverse sector of industries in engaging and empowering through business and education. We are supported by leaders from all over the world to think alike and support the World of Professionals vision incorporated to bring about a change in the world through the power of individual professional background, headquartered in Bangkok, Thailand.  World of Professional\'s commitment in educating, and refining professionals have resulted to a handful of innovations, and conferences; this include the renowned Asian Networkers Convention and Expo (ANCE) now on its third year. The Asian Networkers Convention & Expo, the largest Networking event in the world, is focused on maintaining the high level quality and advancement of Distributors through education and seminar. This event aims to unite the Network Marketing industry in eliminating the prejudice the common mass have in the industry.]]></string>
    <string name="detail_ance">Read details about ANCE</string>
    <string name="title_of_blog">Title Of Blog</string>
    <string name="who_should_attend">Who Should Attend?</string>

</resources>
