<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_timeline"
            android:title="@string/timeline" />
        <group
            android:id="@+id/g1"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_nace"
                android:title="@string/ance_2017" />
        </group>
        <group
            android:id="@+id/g2"
            android:checkableBehavior="none">
            <item

                android:id="@+id/nav_my_account"
                android:title="@string/my_account" />
        </group>

        <group
            android:id="@+id/g4"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_blogging"
                android:title="@string/blogging" />
        </group>
        <group
            android:id="@+id/g5"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_my_blogs"
                android:title="MY BLOGS" />
        </group>

        <group
            android:id="@+id/g6"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_my_friend"
                android:title="@string/my_friend" />
        </group>
        <group
            android:id="@+id/g7"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_photo_feed"
                android:title="PHOTO FEED" />
        </group>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>


</menu>
