<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_manage_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="@string/manage_your_events"
                android:textAlignment="center"
                android:textColor="@color/manage_color"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txt_one_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/you_are_one_step"
                android:textAlignment="center"
                android:textColor="#48354b"
                android:textSize="16sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/email"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="#b2b3b5"
                    android:textColor="@color/manage_color"
                    android:singleLine="true"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginTop="20dp">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/password"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="#b2b3b5"
                    android:textColor="@color/manage_color"                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:paddingRight="24dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="#9495aa"
                android:textSize="14dp" />

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_button"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/layout_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_notAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_account"
                    android:textAlignment="center"
                    android:textColor="#9495aa"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="#ff6c6c"
                    android:textSize="15sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>