<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/reg_layout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/txt_registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/registration"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18dp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llUploadProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50sp"
                android:background="@drawable/white_circle"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rlProfileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center">


                    <ImageView
                        android:id="@+id/ivUserImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/group" />
                </RelativeLayout>


            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llUploadProfile"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="21dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/shape"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="#48354b"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_name"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="21dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/email"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="#48354b"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_email"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="21dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_phone_iphone_24_px"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_mobile"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="#48354b"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_mobile"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="21dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/company"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_company_name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="#48354b"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_company"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="21dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/password"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#48354b"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_registration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_password"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_button"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="13dp" />


            <TextView
                android:id="@+id/txt_tc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_registration"
                android:layout_centerHorizontal="true"
                android:text="@string/by_creating_an_account_you_agree_to_our"
                android:textAlignment="center"
                android:textColor="#9495aa"
                android:textSize="13dp" />


            <TextView
                android:id="@+id/txt_tc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_tc"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="18dp"
                android:text="@string/terms_and_conditions"
                android:textAlignment="center"
                android:textColor="#48354b"
                android:textSize="13dp" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>