<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header_layout"
            layout="@layout/header_layout" />


        <RelativeLayout
            android:id="@+id/layout_post_event"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:layout_below="@+id/header_layout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#f4f4f9">

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_camera" />

        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_post_event"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="34dp">

            <EditText
                android:id="@+id/input_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="#48354b"
                android:textColorHint="#b2b3b5"
                android:textSize="15dp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_event_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeOptions="actionNext"
                android:textColor="#48354b"
                android:textColorHint="#b2b3b5"
                android:textSize="15dp" />
        </android.support.design.widget.TextInputLayout>




        <AutoCompleteTextView
            android:id="@+id/input_location"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/input_layout_description"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/ic_gps_not_fixed"
            android:hint="@string/location"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColor="#48354b"
            android:textSize="15dp" />


        <Button
            android:id="@+id/btn_post_event"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_location"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimary"
            android:text="@string/post"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </RelativeLayout>
</ScrollView>